# refpapers

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt
docs/: Makefile
docs/source/: Configuration.rst  Installing.rst  Introduction.rst  Usage.rst  conf.py  index.rst
example_conf/: conf.yml
refpapers/: __init__.py  apis.py  cli.py  conf.py  doctypes.py  filesystem.py  git.py  logger.py  prompt_category.py  qualitycheck.py  refpapers.py  rename.py  schema.py  search.py  utils.py  view.py
tests/: integration.sh  test_apis.py  test_conf.py  test_dummy.py  test_extraction.py  test_filesystem.py  test_schema.py  test_view.py
