[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "refpapers"
author = "Stig-Arne Grönroos"
author-email = "stig.gronroos@gmail.com"
classifiers = [ "License :: OSI Approved :: MIT License",
                "Development Status :: 4 - Beta",
                "Intended Audience :: Science/Research",
                "Operating System :: OS Independent",
                "Programming Language :: Python",
                "Topic :: Scientific/Engineering", ]
requires = [
    "PyYAML==5.4.1",
    "Unidecode==1.3.2",
    "arxiv==1.4.2",
    "click==8.0.1",
    "crossrefapi==1.5.0",
    "delegator.py==0.1.1",
    "prompt-toolkit==3.0.19",
    "pydantic==1.8.2",
    "rich==10.6.0",
    "scholarly==1.5.1",
    "whoosh==2.7.4",
]

[tool.flit.scripts]
refpapers = "refpapers:cli"

[tool.pytest.ini_options]
addopts = "--flake8 -v --cov=refpapers --cov-report html --mypy --ignore-glob docs/**"
flake8-max-line-length = "120"
