[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "refpapers"
author = "Stig-Arne Grönroos"
author-email = "stig.gronroos@gmail.com"
classifiers = [ "License :: OSI Approved :: MIT License",
                "Development Status :: 4 - Beta",
                "Intended Audience :: Science/Research",
                "Operating System :: OS Independent",
                "Programming Language :: Python",
                "Topic :: Scientific/Engineering", ]
requires = [
    "PyYAML==6.0",
    "Unidecode==1.3.6",
    "arxiv==1.4.7",
    "bibtexparser==1.2.0",
    "click==8.1.3",
    "crossrefapi==1.5.0",
    "delegator.py==0.1.1",
    "prompt-toolkit==3.0.19",
    "pydantic==1.10.9",
    "rapidfuzz==3.5.2",
    "rich==13.4.1",
    "scholarly==1.7.11",
    "whoosh==2.7.4",
]

[tool.flit.scripts]
refpapers = "refpapers:cli"

[tool.pytest.ini_options]
addopts = "--ruff -v --cov=refpapers --cov-report html --mypy --ignore-glob docs/**"

[tool.ruff]
line-length = 120
